<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mathilde.applicationtest.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/title_start_activity_size"
        android:text="@string/hello_main_activity"
        android:id="@+id/title_startactivity_id"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_startactivity_id"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/subtitle_start_activity_size"
        android:textColor="@color/colorSubtitle"
        android:text="@string/mood_main_activity"
        android:id="@+id/mood_startactivity_id" />

    <Button
        android:text="@string/translate_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mood_startactivity_id"
        android:layout_centerHorizontal="true"
        android:onClick="buttonClick"
        android:id="@+id/translate_button_id" />

    <EditText
        android:hint="@string/login_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/edittext_login_id" />

    <Button
        android:text="@string/goto_loginactivity_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_login_id"
        android:onClick="goConnect"
        android:id="@+id/button2" />


</RelativeLayout>
